Fix File Copy Based Initial Sync shutdown and config races

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 5.2.0
    • Affects Version/s: None
    • Component/s: None
    • None
    • Fully Compatible
    • ALL
    • Replication 2021-11-15, Replication 2021-11-29
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      The File Copy Based Initial Syncer may be shut down via signal during a storage change. This results in a deadlock because the storage change cannot complete until the shutdown opCtx is destroyed, which it never will be. Fixed by doing initial syncer shutdown slightly earlier, before the shutdown opCtx is created.

      Additionally there is a race between config changes and storage change which can cause an invariant.

            Assignee:
            Matthew Russotto (Inactive)
            Reporter:
            Matthew Russotto (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: