SERVER-61377 Fix File Copy Based Initial Sync shutdown and config races   * Fix shutdown deadlock by shutting down initial syncer early   * Avoid interruptions due to storage change during config